--- a/siddhart_django/task/templates/task/index.html
+++ b/siddhart_django/task/templates/task/index.html
@@ -4,6 +4,8 @@
         <ul>
             {% for task in tasks %}
                 <li> {{ task }} </li>
+            {% empty %}
+                <li> No task</li>
             {% endfor %}
         </ul>
         <h3>
